create aggregator service
